reject on error

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "vscode-switch-to-spec",
+  "name": "vscode-alternate",
   "displayName": "VS Code Open Buffers",
   "description": "Quickly search your open buffers in VS Code",
   "version": "0.0.1",
   "publisher": "will-wow",
-  "repository": "github:will-wow/vscode-switch-to-spec",
+  "repository": "github:will-wow/vscode-alternate",
   "engines": {
     "vscode": "^1.23.0"
   },
@@ -21,11 +21,11 @@
   "contributes": {
     "commands": [
       {
-        "command": "switch-to-spec.alternateFile",
+        "command": "alternate.alternateFile",
         "title": "Alternate File"
       },
       {
-        "command": "switch-to-spec.alternateFileInSplit",
+        "command": "alternate.alternateFileInSplit",
         "title": "Split Alternate File"
       }
     ]
