only active if there's a projections file

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "Other"
   ],
   "activationEvents": [
-    "*"
+    "workspaceContains:.projections.json"
   ],
   "main": "./out/extension",
   "contributes": {
