--- a/projections-sample.json
+++ b/projections-sample.json
@@ -1,6 +1,14 @@
 {
   "src/*.js": { "alternate": "src/test/{}.test.js" },
   "src/*.jsx": { "alternate": "src/test/{}.test.jsx" },
-  "src/**/*.ts": { "alternate": "src/{dirname}/__test__/{basename}.test.ts" },
+  "src/**/source/*.ts": {
+    "alternate": "src/{dirname}/test/{basename}.test.ts"
+  },
+  "src/*.ts": {
+    "alternates": [
+      "src/{dirname}/__test__/{basename}.test.ts",
+      "src/{}.test.ts"
+    ]
+  },
   "app/*.rb": { "alternate": "test/{}_spec.rb" }
 }
