--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vscode-alternate",
+  "name": "vscode-alternate-file",
   "displayName": "Alternate File",
   "description": "Switch to and create spec files for any framework",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "publisher": "will-wow",
   "repository": {
     "type": "git",
