use 'alternate' for array and string in projections.json

--- a/sample-projections/projections.jest.json
+++ b/sample-projections/projections.jest.json
@@ -1,7 +1,7 @@
 {
   "*.js": { "alternate": "{dirname}/__test__/{basename}.test.js" },
   "*.jsx": {
-    "alternates": [
+    "alternate": [
       "{dirname}/__test__/{basename}.test.jsx",
       "{dirname}/__test__/{basename}.test.js"
     ]
