--- a/sample-projections/projections.sample.json
+++ b/sample-projections/projections.sample.json
@@ -5,10 +5,7 @@
     "alternate": "src/{dirname}/test/{basename}.test.ts"
   },
   "src/*.ts": {
-    "alternate": [
-      "src/{dirname}/__test__/{basename}.test.ts",
-      "src/{}.test.ts"
-    ]
+    "alternate": ["src/{dirname}/__test__/{basename}.test.ts", "src/{}.test.ts"]
   },
   "app/*.rb": { "alternate": "spec/{}_spec.rb" }
 }
