add jest unit tests

--- a/package.json
+++ b/package.json
@@ -51,15 +51,19 @@
     "watch": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
     "test": "npm run compile && node ./node_modules/vscode/bin/test",
+    "test-unit": "jest",
     "format": "npm run format-tslint && npm run format-prettier",
     "format-tslint": "tslint -p . --config tslint.json",
     "format-prettier": "prettier --write \"**/*.{ts,json}\""
   },
   "devDependencies": {
+    "@types/jest": "^24.0.9",
     "@types/mocha": "^5.2.6",
-    "@types/node": "^7.0.65",
+    "@types/node": "^11.10.0",
     "chai": "^4.2.0",
+    "jest": "^24.1.0",
     "prettier": "^1.16.4",
+    "ts-jest": "^24.0.0",
     "tslint": "^5.13.1",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
