--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "license": "MIT",
   "engines": {
-    "vscode": "^1.23.0"
+    "vscode": "^1.23.0",
+    "node": "^10.2.0"
   },
   "keywords": [
     "alternate",
@@ -59,7 +60,6 @@
   "devDependencies": {
     "@types/jest": "^24.0.9",
     "@types/mocha": "^5.2.6",
-    "@types/node": "^11.10.0",
     "chai": "^4.2.0",
     "jest": "^24.1.0",
     "prettier": "^1.16.4",
@@ -71,7 +71,11 @@
     "vscode": "^1.1.30"
   },
   "dependencies": {
-    "@types/util.promisify": "^1.0.0",
-    "util.promisify": "^1.0.0"
+    "@types/find-up": "^2.1.1",
+    "@types/node": "^11.10.0",
+    "@types/ramda": "^0.25.51",
+    "find-up": "^3.0.0",
+    "ramda": "^0.26.1",
+    "remeda": "0.0.9"
   }
 }
