--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "integration": "npm run compile && node ./node_modules/vscode/bin/test",
+    "integration": "npm run compile && CODE_TESTS_WORKSPACE=./test-project CODE_DISABLE_EXTENSIONS=true node ./node_modules/vscode/bin/test",
     "test": "jest",
     "format": "npm run format-tslint && npm run format-prettier",
     "format-tslint": "tslint -p . --config tslint.json",
