--- a/package.json
+++ b/package.json
@@ -59,8 +59,11 @@
     "postinstall": "node ./node_modules/vscode/bin/install",
     "integration": "npm run compile && CODE_TESTS_WORKSPACE=./test-project CODE_DISABLE_EXTENSIONS=true node ./node_modules/vscode/bin/test",
     "test": "jest",
+    "lint": "npm run lint-tslint && npm run lint-prettier",
+    "lint-tslint": "tslint -p . --config tslint.json",
+    "lint-prettier": "prettier --list-different \"**/*.{ts,json,yml}\"",
     "format": "npm run format-tslint && npm run format-prettier",
-    "format-tslint": "tslint -p . --config tslint.json",
+    "format-tslint": "tslint -p . --fix --config tslint.json",
     "format-prettier": "prettier --write \"**/*.{ts,json,yml}\""
   },
   "devDependencies": {
