ignore more files vscode doesn't need

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,12 +1,15 @@
-.vscode/**
-.vscode-test/**
-out/test/**
-out/**/*.map
-src/**
+.build.yml
 .gitignore
-tsconfig.json
-vsc-extension-quickstart.md
-tslint.json
-yarn.lock
-test-project
+.prettierignore
+.projections.json
+.vscode-test/**
+.vscode/**
 assets/screencasts
+out/**/*.map
+out/test/**
+src/**
+test-project
+tsconfig.json
+tslint.json
+vsc-extension-quickstart.md
+yarn.lock
