--- a/.projections.json
+++ b/.projections.json
@@ -1,3 +1,3 @@
 {
-  "src/*.ts": { "alternate": ["src/test/{}.test.ts", "src/{}.test.ts"] }
+  "src/*.ts": { "alternate": ["src/{}.test.ts", "src/test/{}.test.ts"] }
 }
