--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "node": "^8.11.3"
   },
   "keywords": [
+    "vscode",
     "alternate",
     "spec",
-    "test"
+    "test",
+    "projectile",
+    "projections"
   ],
   "categories": [
     "Other"
   ],
-  "bin": {
-    "alt": "./bin/cli.js"
-  },
   "icon": "assets/icon.png",
   "galleryBanner": {
     "color": "#172F54",
@@ -62,8 +62,7 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "integration": "npm run compile && CODE_TESTS_WORKSPACE=./test-project CODE_DISABLE_EXTENSIONS=true node ./node_modules/vscode/bin/test",
-    "test": "jest",
+    "test": "npm run compile && CODE_TESTS_WORKSPACE=./test-project CODE_DISABLE_EXTENSIONS=true node ./node_modules/vscode/bin/test",
     "lint": "npm run lint-tslint && npm run lint-prettier",
     "lint-tslint": "tslint -p . --config tslint.json",
     "lint-prettier": "prettier --list-different \"**/*.{ts,json,md,yml}\"",
@@ -72,11 +71,9 @@
     "format-prettier": "prettier --write \"**/*.{ts,json,md,yml}\""
   },
   "devDependencies": {
-    "@types/jest": "^24.0.9",
+    "@types/mocha": "^5.2.6",
     "chai": "^4.2.0",
-    "jest": "^24.1.0",
     "prettier": "^1.16.4",
-    "ts-jest": "^24.0.0",
     "tslint": "^5.13.1",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
@@ -84,10 +81,8 @@
     "vscode": "^1.1.30"
   },
   "dependencies": {
-    "@types/find-up": "^2.1.1",
     "@types/node": "^11.10.0",
-    "find-up": "^3.0.0",
-    "remeda": "0.0.9",
-    "result-async": "0.1.1"
+    "alternate-file": "^0.2.2",
+    "result-async": "^1.0.0"
   }
 }
