--- a/package.json
+++ b/package.json
@@ -25,6 +25,18 @@
   "categories": [
     "Other"
   ],
+  "badges": [
+    {
+      "url": "https://img.shields.io/azure-devops/build/AlternateFile/17c9d9be-71eb-46c2-8af1-e017d13fb009/1/master.svg",
+      "href": "https://dev.azure.com/AlternateFile/VsCodeAlternateFile/_build/latest?definitionId=1&branchName=master",
+      "description": "Build Status"
+    },
+    {
+      "url": "https://img.shields.io/david/alternate-file/vscode-alternate-file.svg",
+      "href": "https://david-dm.org/alternate-file/vscode-alternate-file",
+      "description": "Dependencies"
+    }
+  ],
   "icon": "assets/icon.png",
   "galleryBanner": {
     "color": "#172F54",
@@ -62,6 +74,7 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
+    "preversion": "npm run lint",
     "test": "npm run compile && CODE_TESTS_WORKSPACE=./test-project CODE_DISABLE_EXTENSIONS=true node ./node_modules/vscode/bin/test",
     "lint": "npm run lint-tslint && npm run lint-prettier",
     "lint-tslint": "tslint -p . --config tslint.json",
