--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
   },
   "dependencies": {
     "@types/node": "^11.10.0",
-    "alternate-file": "file:../alternate-file",
-    "result-async": "file:../result-async"
+    "alternate-file": "^0.2.3",
+    "result-async": "^1.1.0"
   }
 }
