--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install",
+    "postinstall": "vscode-install",
     "preversion": "npm run lint",
     "test": "npm run compile && CODE_TESTS_WORKSPACE=./test-project CODE_DISABLE_EXTENSIONS=true node ./node_modules/vscode/bin/test",
     "lint": "npm run lint-tslint && npm run lint-prettier",
