--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "license": "MIT",
   "engines": {
-    "vscode": "^1.23.0",
-    "node": "^8.11.3"
+    "vscode": ">=1.23.0",
+    "node": ">=8.11.3"
   },
   "keywords": [
     "vscode",
@@ -103,7 +103,7 @@
   },
   "dependencies": {
     "@types/node": "^11.10.0",
-    "alternate-file": "^0.2.5",
-    "result-async": "^1.2.1"
+    "alternate-file": "^0.2.6",
+    "result-async": "^1.3.0"
   }
 }
